Fixed job menu on mobile

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -309,19 +309,26 @@ ul.job_list_items {
   position: relative;
   max-height: 100vh;
   z-index: 10;
+  max-width: 100vw;
 }
 .close-button {
   position: absolute;
-  left: -60px;
+  left: -3rem;
   background: #757C87;
-  width: 60px;
-  height: 55px;
+  width: 3rem;
+  height: 2.75rem;
   text-align: center;
-  line-height: 60px;
+  line-height: 2.75rem;
   font-weight: bold;
   color: #fff;
-  font-size: 4em;
+  font-size: 2.75rem;
   top: 0;
+}
+
+@media #{$medium-only} {
+  .profile {
+    margin-left: 3rem;
+  }
 }
 
 // Slider
@@ -346,8 +353,14 @@ ul.job_list_items {
 	transition: top 0.3s 0s;
 }
 
+@media #{$small-only} {
+  .hide-on-mobile {
+    display: none;
+  }
+}
+
 @media #{$medium-only} {
-  .slide-in {
+  .hide-on-mobile {
     display: none;
   }
 }
